--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -19,9 +19,10 @@
                 <h1 class="display-4">Openapi Map</h1>
 
                 <br/>
+                <br/>
 
                 <table class="table">
-                    <thead>
+                    <thead class="thead-dark">
                     <tr>
                         <th scope="col">Service name</th>
                         <th scope="col">Openapi link</th>
