--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -24,10 +24,10 @@
                 <table class="table">
                     <thead class="thead-dark">
                     <tr>
-                        <th scope="col">Service name</th>
-                        <th scope="col">Openapi link</th>
-                        <th scope="col">Path</th>
-                        <th scope="col">Operations</th>
+                        <th scope="col" class="text-left">Service name</th>
+                        <th scope="col" class="text-left">Openapi link</th>
+                        <th scope="col" class="text-left">Path</th>
+                        <th scope="col" class="text-left">Operations</th>
                     </tr>
                     </thead>
                     <tbody id="services">
