--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -21,6 +21,7 @@
                 <br/>
                 <br/>
 
+                <h2 class="display-5">Endpoints with ingresses</h2>
                 <table class="table">
                     <thead class="thead-dark">
                     <tr>
