--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -17,10 +17,12 @@
         <div class="col-12 mx-auto">
             <div style="background:transparent !important" class="jumbotron jumbotron-fluid text-center">
                 <h1 class="display-4">Openapi Map</h1>
+                <p class="lead">- Aggregated Openapi services in your cluster</p>
 
                 <br/>
                 <br/>
 
+                <h2 class="display-5" id="namespace"></h2>
                 <h2 class="display-5">Endpoints with ingresses</h2>
                 <table class="table">
                     <thead class="thead-dark">
