--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -29,6 +29,7 @@
                     <tr>
                         <th scope="col" class="text-left">Service name</th>
                         <th scope="col" class="text-left">Openapi link</th>
+                        <th scope="col" class="text-left">Openapi UI link</th>
                         <th scope="col" class="text-left">Path</th>
                         <th scope="col" class="text-left">Operations</th>
                     </tr>
