--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Openapi Map</title>
+    <title>OpenAPI Map</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -16,8 +16,8 @@
     <div class="row align-items-center h-100">
         <div class="col-12 mx-auto">
             <div style="background:transparent !important" class="jumbotron jumbotron-fluid text-center">
-                <h1 class="display-4">Openapi Map</h1>
-                <p class="lead">- Aggregated Openapi services in your cluster</p>
+                <h1 class="display-4">OpenAPI Map</h1>
+                <p class="lead">- Aggregated OpenAPI services in your cluster</p>
 
                 <br/>
                 <br/>
