--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -21,7 +21,7 @@
         <div class="col-12 mx-auto">
             <div style="background:transparent !important" class="jumbotron jumbotron-fluid text-center">
                 <h1 class="display-4">OpenAPI Map</h1>
-                <p class="lead">- Aggregated OpenAPI services in your cluster</p>
+                <p class="lead font-italic">Aggregated OpenAPI services in your cluster</p>
 
                 <br/>
                 <br/>
