Let table operations overflow.

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -45,10 +45,8 @@
                             <a ng-hide="service.openapiUiUrl == null" target="_blank" href="{{service.openapiUiUrl}}">| UI</a>
                         </td>
                         <td class="lead text-left">{{service.path}}</td>
-                        <td class="lead text-left text-nowrap">
-                            <div ng-repeat="operation in service.operations">
-                                <button type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
-                            </div>
+                        <td class="lead text-left text-nowrap" ng-repeat="operation in service.operations">
+                            <button type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
                         </td>
                     </tr>
                     </tbody>
@@ -72,11 +70,8 @@
                             <a ng-hide="service.openapiUiUrl == null" href="{{service.openapiUiUrl}}">| UI</a>
                         </td>
                         <td class="lead text-left">{{service.path}}</td>
-                        <td class="lead text-left text-nowrap">
-                            <div ng-repeat="operation in service.operations">
-                                <button type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}
-                                </button>
-                            </div>
+                        <td class="lead text-left text-nowrap" ng-repeat="operation in service.operations">
+                            <button type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
                         </td>
                     </tr>
                     </tbody>
