--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -8,6 +8,7 @@
 
     <style>
         body,html {height: 100%;}
+        .btn-group {display: flex;}
     </style>
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
@@ -45,8 +46,8 @@
                             <a ng-hide="service.openapiUiUrl == null" target="_blank" href="{{service.openapiUiUrl}}">| UI</a>
                         </td>
                         <td class="lead text-left">{{service.path}}</td>
-                        <td class="lead text-left text-nowrap" ng-repeat="operation in service.operations">
-                            <button type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
+                        <td class="lead text-left text-nowrap">
+                            <button ng-repeat="operation in service.operations" type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
                         </td>
                     </tr>
                     </tbody>
@@ -70,8 +71,8 @@
                             <a ng-hide="service.openapiUiUrl == null" href="{{service.openapiUiUrl}}">| UI</a>
                         </td>
                         <td class="lead text-left">{{service.path}}</td>
-                        <td class="lead text-left text-nowrap" ng-repeat="operation in service.operations">
-                            <button type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
+                        <td class="lead text-left text-nowrap">
+                            <button ng-repeat="operation in service.operations" type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
                         </td>
                     </tr>
                     </tbody>
