--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -20,18 +20,22 @@
     <a class="navbar-brand" href="#">Filters:</a>
     <input ng-model="filter.name" placeholder="Filter service name" aria-label="Filter service name">
     <input ng-model="filter.path" placeholder="Filter path" aria-label="Filter path">
+<!--
+    <input ng-model="filter.annotations" placeholder="Filter annotation" aria-label="Filter annotation">
+    <input ng-model="filter.operations" placeholder="Filter operation" aria-label="Filter operation">
+-->
 </nav>
 
 <div class="container h-100" ng-controller="OpenAPIMapController">
     <div class="row align-items-center h-100">
         <div class="col-12 mx-auto">
             <div style="background:transparent !important" class="jumbotron jumbotron-fluid text-center">
+
                 <h1 class="display-4">OpenAPI Map</h1>
                 <p class="lead font-italic">Aggregated OpenAPI services in your cluster</p>
 
                 <br/>
                 <br/>
-
 
                 <h2 class="display-5" id="namespace">Namespace: {{namespace}}</h2>
                 <h3 class="display-5">Endpoints with ingresses</h3>
@@ -42,6 +46,9 @@
                         <th scope="col" class="text-left">Links</th>
                         <th scope="col" class="text-left">Path</th>
                         <th scope="col" class="text-left">Operations</th>
+<!--
+                        <th scope="col" class="text-left">Annotations</th>
+-->
                     </tr>
                     </thead>
                     <tbody id="ingressedServices">
@@ -53,8 +60,14 @@
                         </td>
                         <td class="lead text-left">{{service.path}}</td>
                         <td class="lead text-left text-nowrap">
-                            <button ng-repeat="operation in service.operations" type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
+                            <button ng-repeat="operation in service.operations | filter: filter" type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
                         </td>
+<!--
+                        <td class="lead text-left">
+                            <div ng-show="true"><a href="">Show annotations</a></div>
+                            <div ng-hide="true" ng-repeat="annotation in service.annotations">{{annotation['name']}}: {{annotation['value']}}</div>
+                        </td>
+-->
                     </tr>
                     </tbody>
                 </table>
@@ -67,6 +80,9 @@
                         <th scope="col" class="text-left">Links</th>
                         <th scope="col" class="text-left">Path</th>
                         <th scope="col" class="text-left">Operations</th>
+<!--
+                        <th scope="col" class="text-left">Annotations</th>
+-->
                     </tr>
                     </thead>
                     <tbody id="nonIngressedServices">
@@ -78,8 +94,14 @@
                         </td>
                         <td class="lead text-left">{{service.path}}</td>
                         <td class="lead text-left text-nowrap">
-                            <button ng-repeat="operation in service.operations" type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
+                            <button ng-repeat="operation in service.operations | filter: filter" type="button" class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>{{operation}}</button>
                         </td>
+                        <!--
+                        <td class="lead text-left">
+                            <div ng-show="true"><a href="">Show annotations</a></div>
+                            <div ng-hide="true" ng-repeat="annotation in service.annotations">{{annotation['name']}}: {{annotation['value']}}</div>
+                        </td>
+-->
                     </tr>
                     </tbody>
                 </table>
